src/objects/Template_Outcome__c.object
<CustomObject>
    <description>Template for an Outcome</description>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Template Outcomes</relationshipLabel>
        <relationshipName>Template_Outcomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsParentContractLocked__c</fullName>
        <formula>Contract__r.IsLocked__c</formula>
        <label>IsParentContractLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performance_commitment__c</fullName>
        <description>Performance commitment / goal is a target # of participants that we promise to our funders that we as an organization will achieve in order to maintain contract compliance.</description>
        <inlineHelpText>Performance commitment / goal is a target # of participants that we promise to our funders that we as an organization will achieve in order to maintain contract compliance.</inlineHelpText>
        <label>Performance commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Template_Outcome_Detail__c</fullName>
        <label>Template Outcome Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Template_Outcome_Name__c</fullName>
        <label>Template Outcome Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Milestones__c</fullName>
        <inlineHelpText>Total Number of Milestones for this Outcome.</inlineHelpText>
        <label>Total Number of Milestones</label>
        <summaryForeignKey>Template_Milestone__c.Template_Outcome__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Template Outcome</label>
    <nameField>
        <displayFormat>TO-{0000}</displayFormat>
        <label>Template Outcome Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>